--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=demo
+
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/BookAShow?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jackson.date-format=yyyy-MM-dd
+
+# Show or not log for each SQL query
+spring.jpa.show-sql=true
